[package]
name = "backdrop"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "Qqwy / Marten"]
description = "Drop your large or complex objects in the background with Backdrop! (later, on another thread, or both! Fully customizable! Tokio supported!)"
categories = ["alloc", "drop", "cache", "tokio", "thread"]
keywords = ["alloc", "no_std", "drop", "memory-management"]
readme = "README.md"
repository = "https://github.com/qqwy/rust-backdrop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backdrop"

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true}

[features]
std = ["lazy_static", "alloc"]
alloc = []
default = ["std", "tokio"]