[package]
name = "backdrop"
version = "0.1.11"
edition = "2021"
license = "MIT"
authors = [ "Qqwy / Marten"]
description = "Drop your large or complex objects in the background with Backdrop! (later, on another thread, or both! Fully customizable! Tokio supported!)"
categories = ["memory-management", "no-std", "no-std::no-alloc", "asynchronous", "data-structures"]
keywords = ["alloc", "no_std", "drop", "tokio"]
readme = "README.md"
repository = "https://github.com/qqwy/rust-backdrop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { version = "0.7.0", optional = true, default-features = false }
lazy_static = { version = "1.4.0", optional = true }
rkyv = { version = "0.7.40", optional = true, default-features = false }
tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true}

[features]
std = ["lazy_static", "alloc"]
alloc = []
default = ["std"]
doc = ["std", "tokio", "rkyv/size_32", "bytecheck"] # <- Not for end users; Only used to enable nightly-only feature doc_auto_cfg when building documentation

[package.metadata.docs.rs]
features = ["doc"]

[[example]]
name = "comparison"
required-features = ["tokio"]
